gcc/testsuite/rust/rustc/ui/parser/issue-68890.rs
enum e{A((?'a a+?+l))}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }

